--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,15 +31,16 @@ jobs:
       - name: List macOS artifacts
         run: ls -l exports
 
-      - name: Create draft release (if not exists) and upload macOS artifacts
+      - name: Upload macOS artifacts to draft release
         uses: softprops/action-gh-release@v2
         with:
           draft: true
           generate_release_notes: true
           files: |
-            exports/Animalese Typing*.dmg
-            exports/AnimaleseTyping*.dmg.blockmap
+            exports/AnimaleseTypingSetup*.dmg
             exports/latest-mac.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
   build-windows:
     runs-on: windows-latest
@@ -73,8 +74,9 @@ jobs:
           draft: true
           files: |
             exports/AnimaleseTypingSetup*.exe
-            exports/AnimaleseTypingSetup*.exe.blockmap
             exports/latest.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
   build-linux:
     runs-on: ubuntu-latest
@@ -109,6 +111,8 @@ jobs:
         with:
           draft: true
           files: |
-            exports/AnimaleseTyping*.AppImage
-            exports/AnimaleseTyping*.AppImage.zsync
+            exports/AnimaleseTypingSetup*.AppImage
+            exports/AnimaleseTypingSetup*.deb
             exports/latest-linux.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
